[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/0x72_DungeonTilesetII_v1.4.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/light.png" type="Texture" id=4]
[ext_resource path="res://SFX/GunSFX.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/dir_light2-export.png" type="Texture" id=6]
[ext_resource path="res://SFX/Enemy_hurt.wav" type="AudioStream" id=7]
[ext_resource path="res://overlays/Hurtbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://Player/Guns/SMG.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 6 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.0
height = 10.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
z_index = 10
collision_layer = 258
collision_mask = 5
script = ExtResource( 2 )
friction = 300
acceleration = 300
gun_knockback = 10

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 45, 16, 19 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="Body" type="Position2D" parent="."]

[node name="FlashLight" type="Light2D" parent="Body"]
texture = ExtResource( 6 )
offset = Vector2( 128, 0 )
shadow_enabled = true

[node name="SMG" parent="Body" instance=ExtResource( 9 )]

[node name="Lantern2" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
energy = 0.5
shadow_gradient_length = 0.5

[node name="Lantern" type="Light2D" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
energy = 0.5
shadow_enabled = true
shadow_gradient_length = 0.5

[node name="PistolSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
attenuation = 2.0

[node name="Hurtbox" parent="." instance=ExtResource( 8 )]
collision_layer = 2
collision_mask = 0

[node name="Timer" parent="Hurtbox" index="0"]
one_shot = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0.5, 0 )
shape = SubResource( 2 )

[node name="FlashTimer" type="Timer" parent="."]
autostart = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]

[editable path="Hurtbox"]
